Accounts Table header overflow fix for long Col names

--- a/frontend-new/src/components/Resizable/index.module.scss
+++ b/frontend-new/src/components/Resizable/index.module.scss
@@ -14,3 +14,10 @@
   display: grid;
   place-content: center;
 }
+
+.table-custom-th {
+  & > div > span {
+    // This span targets span of column header cell
+    overflow: hidden;
+  }
+}
